create shiki-twoslash page

--- a/site/src/pages/index.mdx
+++ b/site/src/pages/index.mdx
@@ -12,6 +12,7 @@ sorts of fantastic shit like that.
 
 - [Generic Types](./generics)
 - [Using MDX with Next.js](./mdx)
+- [Intelligent TypeScript Code Blocks with MDX and Shiki Twoslash](./shiki)
 
 ## Where to find me
 
