add a little responsiveness to page

--- a/site/src/pages/generics.mdx
+++ b/site/src/pages/generics.mdx
@@ -245,12 +245,8 @@ Okay, it's time to say it: **we need generic types!**
 
 ---
 
-You're finally ready to learn a little secret:
-
-`functions:values::generics:types` (functions are to values as generics are to
-types)
-
-To put it another way: generics are the functions of the types world.
+You're finally ready to learn a little secret: generics are the functions of the
+type world!
 
 Their syntax is different, but their purpose is the same:
 
