add growlove decorations

--- a/site/src/pages/index.mdx
+++ b/site/src/pages/index.mdx
@@ -1,4 +1,6 @@
-# 🌱❤️‍🔥 (GrowLove)
+import {GrowLove} from '../growlove.tsx'
+
+# <GrowLove /> GrowLove
 
 A digital garden tended by [`with-heart`](https://github.com/with-heart).
 
