derive page title and description from frontmatter

--- a/site/src/pages/generics.mdx
+++ b/site/src/pages/generics.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Generic Types'
-description: "What they are, why they're important, and how to use them."
+description: 'An exploration of generic types and their uses'
 status: 'seedling'
 ---
 
