--- a/site/src/pages/index.mdx
+++ b/site/src/pages/index.mdx
@@ -1,3 +1,10 @@
+---
+title: 'GrowLove'
+description:
+  'A digital garden about open source, React, TypeScript, XState, component
+  libraries, and more'
+---
+
 import {GrowLove} from '../growlove.tsx'
 
 # <GrowLove /> GrowLove
