--- a/site/src/pages/index.mdx
+++ b/site/src/pages/index.mdx
@@ -28,3 +28,5 @@ sorts of fantastic shit like that.
 - GitHub: [with-heart](https://github.com/with-heart)
 - Twitter: [grow_love](https://twitter.com/grow_love)
 - Twitch: [with_heart](https://www.twitch.tv/with_heart)
+- Email: [with.heart@pm.me](mailto:with.heart@pm.me)
+- ETH: [with-heart.eth](https://rainbow.me/with-heart.eth)
