create credits page

--- a/site/src/pages/index.mdx
+++ b/site/src/pages/index.mdx
@@ -22,6 +22,7 @@ sorts of fantastic shit like that.
 - [Generic Types](./generics)
 - [Using MDX with Next.js](./mdx)
 - [Intelligent TypeScript Code Blocks with MDX and Shiki Twoslash](./shiki)
+- [Credits](./credits)
 
 ## Where to find me
 
