add table of contents to pages

--- a/site/src/pages/generics.mdx
+++ b/site/src/pages/generics.mdx
@@ -18,6 +18,10 @@ type HelloRopats = Hello<'Ropats'>
 
 ---
 
+## Table of Contents
+
+---
+
 ## What are generic types?
 
 In order to talk about generics, we should first talk about functions.
