--- a/site/src/pages/mdx.mdx
+++ b/site/src/pages/mdx.mdx
@@ -8,6 +8,8 @@ status: 'seedling'
 
 <p className="subtitle">{description}</p>
 
+## Table of Contents
+
 ## Initial installation
 
 Adds support for `.mdx` files. Stores `mdx`-specific configuration in
