--- a/site/src/pages/shiki.mdx
+++ b/site/src/pages/shiki.mdx
@@ -10,6 +10,8 @@ status: 'seedling'
 
 <p className="subtitle">{description}</p>
 
+## Table of Contents
+
 ## What is `shiki-twoslash`?
 
 [`shiki-twoslash`] is a library that combines the functionality of two
