link to shiki-twoslash article from next+mdx

--- a/site/src/pages/mdx.mdx
+++ b/site/src/pages/mdx.mdx
@@ -55,7 +55,7 @@ title: 'Some Title'
 # {title}
 ```
 
-yields something like
+<JoinCode />
 
 ```html
 <h1>Some Title</h1>
@@ -121,3 +121,6 @@ export default withMdx({
 - [paste the CSS from #3](https://github.com/shikijs/twoslash/tree/main/packages/remark-shiki-twoslash#plugin-setup)
   into `styles/shiki.css`
 - add `import '../styles/shiki.css'` to `_app.tsx`
+- check out
+  [Intelligent TypeScript Code Blocks with MDX and Shiki Twoslash](./shiki) to
+  learn how to use your new powers!
