add mental health note to index

--- a/site/src/pages/index.mdx
+++ b/site/src/pages/index.mdx
@@ -14,8 +14,14 @@ A digital garden tended by [`with-heart`](https://github.com/with-heart).
 The content in this garden is forever growing, never quite complete. It evolves
 as I evolve. No expectations.
 
-Featuring open source, React, TypeScript, XState, component libraries, & all
+I want this to be a collection of love letters to so many things I enjoy and
+rely on like open source, React, TypeScript, XState, component libraries, & all
 sorts of fantastic shit like that.
+
+And I also want to be open and honest about mental health. I've spent most of my
+adult life depressed and I'm _so_ fucking tired of living that way. I need to
+heal by writing and sharing and allowing others in. I hope that it might help
+some of yall too! 🌱❤️‍🔥
 
 ## Pages
 
