create @vercel/og page

--- a/site/src/pages/index.mdx
+++ b/site/src/pages/index.mdx
@@ -28,6 +28,7 @@ some of yall too! 🌱❤️‍🔥
 - [Generic Types](./generics)
 - [Using MDX with Next.js](./mdx)
 - [Intelligent TypeScript Code Blocks with MDX and Shiki Twoslash](./shiki)
+- [Generating dynamic social card images with `@vercel/og`](./vercel-og)
 - [Credits](./credits)
 
 ## Where to find me
