--- a/site/src/pages/index.mdx
+++ b/site/src/pages/index.mdx
@@ -25,10 +25,10 @@ some of yall too! 🌱❤️‍🔥
 
 ## Pages
 
-- [Generic Types](./generics)
-- [Using MDX with Next.js](./mdx)
-- [Intelligent TypeScript Code Blocks with MDX and Shiki Twoslash](./shiki)
-- [Generating dynamic social card images with `@vercel/og`](./vercel-og)
+- [Generic Types](./generic-types)
+- [Using MDX with Next.js](./nextjs-mdx)
+- [Intelligent TypeScript Code Blocks with MDX and Shiki Twoslash](./shiki-twoslash)
+- [Generating dynamic social card images with `@vercel/og`](./vercel-og-dynamic-social-cards)
 - [Credits](./credits)
 
 ## Where to find me
