update page descriptions

--- a/site/src/pages/generic-types.mdx
+++ b/site/src/pages/generic-types.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Generic Types'
-description: 'An exploration of generic types and their uses'
+description: 'An exploration of generic types and their many uses in TypeScript'
 status: 'seedling'
 ---
 
