--- a/site/src/pages/index.mdx
+++ b/site/src/pages/index.mdx
@@ -2,7 +2,7 @@
 title: 'GrowLove'
 description:
   'A digital garden about open source, React, TypeScript, XState, component
-  libraries, and more'
+  libraries, mental health, and more'
 ---
 
 import {GrowLove} from '../growlove.tsx'
