--- a/site/src/pages/shiki-twoslash.mdx
+++ b/site/src/pages/shiki-twoslash.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'Intelligent TypeScript Code Blocks with MDX and Shiki Twoslash'
 description:
-  'How to use `mdx` and `shiki-twoslash` to add a VS Code-like experience to
-  code blocks'
+  'How to use `mdx` and `shiki-twoslash` to add VSCode-like syntax highlighting
+  and TypeScript experience to code blocks'
 status: 'seedling'
 ---
 
