add link to terminal+git on index

--- a/site/src/pages/index.mdx
+++ b/site/src/pages/index.mdx
@@ -29,6 +29,7 @@ some of yall too! 🌱❤️‍🔥
 - [Using MDX with Next.js](./nextjs-mdx)
 - [Intelligent TypeScript Code Blocks with MDX and Shiki Twoslash](./shiki-twoslash)
 - [Generating dynamic social card images with `@vercel/og`](./vercel-og-dynamic-social-cards)
+- [A Solid Terminal and Git Cheatsheet](./terminal-git-cheatsheet)
 - [Credits](./credits)
 
 ## Where to find me
